Finish permission flow

--- a/locales/de/translation.json
+++ b/locales/de/translation.json
@@ -1,4 +1,9 @@
 {
+  "cameraPermissionDialog": {
+    "callToAction": "Zulassen",
+    "content": "Die {{appname}} erfordert die Verwendung Ihrer Kamera, um den {{passName}} zu erfassen",
+    "title": "Bitte erlauben Sie die Verwendung der Kamera"
+  },
   "footer": {
     "disclaimer": "Dies ist keine offizielle Regierungswebsite. Weitere Informationen zum CovidPass finden Sie unter https://nzcp.covid19.health.nz",
     "privacy": "Die Ergebnisse der Scans werden vertraulich behandelt und nicht an Dritte, weder privat, öffentlich noch staatlich, weitergegeben. Dieser Webseite wurde keinerlei Tracking hinzugefügt. Wenn Sie Probleme feststellen, senden Sie bitte eine E-Mail an vaxxed@contrer.as"
