--- a/locales/en/translation.json
+++ b/locales/en/translation.json
@@ -1,4 +1,9 @@
 {
+  "cameraPermissionDialog": {
+    "callToAction": "Allow",
+    "content": "The {{appname}} requires the use of your camera to capture the {{passName}}",
+    "title": "Please allow camera use"
+  },
   "footer": {
     "disclaimer": "This is not an official Government website. For more information about the COVIDpass, please go to https://nzcp.covid19.health.nz",
     "privacy": "The results of the scans are not shared to any entity; private, public, or governmental. No tracking whatsoever has been added to this site, if you find any issues, please email vaxxed@contrer.as"
