--- a/locales/fa/translation.json
+++ b/locales/fa/translation.json
@@ -1,4 +1,9 @@
 {
+  "cameraPermissionDialog": {
+    "callToAction": "اجازه دادن",
+    "content": "{{appname}} نیاز به استفاده از دوربین شما برای ضبط {{passName}} دارد",
+    "title": "لطفا اجازه استفاده از دوربین را بدهید"
+  },
   "footer": {
     "disclaimer": "این یک وب سایت رسمی دولت نیست. برای کسب اطلاعات بیشتر در مورد CovidPass، لطفا به آدرس https://nzcp.covid19.health.nz مراجعه نمایید.",
     "privacy": "نتایج اسکن‌ها به هیچ نهاد خصوصی، دولتی و یا با عموم به اشتراک گذاشته نمی‌شود. این وبسایت فاقد هرگونه سیستم ردیابی می‌باشد ، در مواجه با هرگونه مشکلی لطفا با نشانی پست الکترونیکی  ذیل ارتباط برقرار فرمایید \nvaxxed@contrer.as"
