--- a/locales/hi/translation.json
+++ b/locales/hi/translation.json
@@ -1,4 +1,9 @@
 {
+  "cameraPermissionDialog": {
+    "callToAction": "अनुमति दें",
+    "content": "{{appname}} को {{passName}} को कैप्चर करने के लिए आपके कैमरे के उपयोग की आवश्यकता होती है",
+    "title": "कृपया कैमरा उपयोग की अनुमति दें"
+  },
   "footer": {
     "disclaimer": "यह एक आधिकारिक सरकारी वेबसाइट नहीं है। COVIDpass के बारे में अधिक जानकारी के लिए, कृपया https://nzcp.covid19.health.nz . पर जाएं",
     "privacy": "स्कैन के परिणाम किसी भी इकाई; निजी, सार्वजनिक या सरकारी को साझा नहीं किए जाते हैं। इस साइट पर जो भी ट्रैकिंग नहीं जोड़ी गई है, अगर आपको कोई समस्या मिलती है, तो कृपया vaxxed@contrer.as पर ईमेल करें"
