--- a/locales/sm/translation.json
+++ b/locales/sm/translation.json
@@ -1,4 +1,9 @@
 {
+  "cameraPermissionDialog": {
+    "callToAction": "Fa&#39;ataga",
+    "content": "E mana&#39;omia e le {{appname}} le fa&#39;aogaina o lau meapueata e pu&#39;e ai le {{passName}}",
+    "title": "Fa&#39;amolemole fa&#39;ataga le fa&#39;aoga meapueata"
+  },
   "footer": {
     "disclaimer": "E le ose upegatafa&#39;ilagi aloaia a le Malo. Mo nisi fa&#39;amatalaga e uiga ile COVIDpass, fa&#39;amolemole alu ile https://nzcp.covid19.health.nz",
     "privacy": "O fa&#39;ai&#39;uga o su&#39;esu&#39;ega e le fa&#39;asoa i so&#39;o se fa&#39;alapotopotoga; tumaoti, lautele, pe faalemalo. Leai se su&#39;esu&#39;ega so&#39;o se mea ua fa&#39;aopoopoina i lenei &#39;upega tafa&#39;ilagi, pe a e mauaina ni fa&#39;afitauli, fa&#39;amolemole imeli vaxxed@contrer.as"
