--- a/locales/zh-cn/translation.json
+++ b/locales/zh-cn/translation.json
@@ -1,4 +1,9 @@
 {
+  "cameraPermissionDialog": {
+    "callToAction": "允许",
+    "content": "{{appname}} 需要使用相机捕获 {{passName}}",
+    "title": "请允许使用相机"
+  },
   "footer": {
     "disclaimer": "這不是官方的政府網站。 有關 COVIDpass 的更多信息，請訪問 https://nzcp.covid19.health.nz",
     "privacy": "扫描结果不会共享给任何实体；私人、公共或政府实体。本网站没有添加任何追踪信息，如果您发现任何问题，请发送电子邮件至 vaxxed@contrer.as"
