--- a/locales/ar/translation.json
+++ b/locales/ar/translation.json
@@ -28,6 +28,8 @@
     "Date of birth": "تاريخ الميلاد",
     "First name": "الاسم الأول",
     "Last name": "اسم العائلة",
+    "Success": "Success",
+    "Valid": "Valid",
     "Verification results": "نتائج التحقق",
     "View details": "عرض التفاصيل",
     "onlyForVerificationPurposes": "يرجى استخدام النتائج لأغراض التحقق فقط. إنه لأمر جيد احترام خصوصية الجميع.",
