--- a/locales/fa/translation.json
+++ b/locales/fa/translation.json
@@ -28,6 +28,8 @@
     "Date of birth": "تاریخ تولد",
     "First name": "نام",
     "Last name": "نام خانوادگی",
+    "Success": "Success",
+    "Valid": "Valid",
     "Verification results": "تأیید اعتبار نتایج ",
     "View details": "مشاهده جزئیات",
     "onlyForVerificationPurposes": "لطفا نتایج را فقط به منظور اهداف تأیید استفاده نمایید و به حريم خصوصي دیگران احترام بگذارید. ",
