--- a/locales/zh-cn/translation.json
+++ b/locales/zh-cn/translation.json
@@ -28,6 +28,8 @@
     "Date of birth": "出生日期",
     "First name": "名字",
     "Last name": "姓氏",
+    "Success": "Success",
+    "Valid": "Valid",
     "Verification results": "验证结果",
     "View details": "查看详情",
     "onlyForVerificationPurposes": "请仅将结果用于验证目的。尊重每个人的隐私是一件好事。",
