--- a/locales/zh-hk/translation.json
+++ b/locales/zh-hk/translation.json
@@ -28,6 +28,8 @@
     "Date of birth": "出生日期",
     "First name": "名字",
     "Last name": "姓氏",
+    "Success": "Success",
+    "Valid": "Valid",
     "Verification results": "驗證結果",
     "View details": "查看詳情",
     "onlyForVerificationPurposes": "請使用結果僅作驗證之用。尊重每個人的隱私是件好事",
