--- a/locales/de/translation.json
+++ b/locales/de/translation.json
@@ -28,8 +28,8 @@
     "Date of birth": "Geburtsdatum",
     "First name": "Vorname",
     "Last name": "Nachname",
-    "Success": "Success",
-    "Valid": "Valid",
+    "Success": "Erfolg",
+    "Valid": "Gültig",
     "Verification results": "Prüfergebnisse",
     "View details": "Details anzeigen",
     "onlyForVerificationPurposes": "Bitte verwenden Sie die Ergebnisse nur zu Überprüfungszwecken. Es ist gut, die Privatsphäre aller zu respektieren.",
