--- a/locales/es/translation.json
+++ b/locales/es/translation.json
@@ -28,8 +28,8 @@
     "Date of birth": "Fecha de cumpleaños",
     "First name": "Primer nombre",
     "Last name": "Apellido",
-    "Success": "Success",
-    "Valid": "Valid",
+    "Success": "Éxito",
+    "Valid": "Válido",
     "Verification results": "Resultados de la verificación",
     "View details": "Ver detalles",
     "onlyForVerificationPurposes": "Utilice los resultados únicamente para fines de verificación. Es bueno respetar la privacidad de todos.",
