--- a/locales/hi/translation.json
+++ b/locales/hi/translation.json
@@ -28,8 +28,8 @@
     "Date of birth": "जन्मतिथि",
     "First name": "पहला नाम",
     "Last name": "अंतिम नाम",
-    "Success": "Success",
-    "Valid": "Valid",
+    "Success": "सफलता",
+    "Valid": "वैध",
     "Verification results": "सत्यापन के परिणाम",
     "View details": "विवरण देखें",
     "onlyForVerificationPurposes": "कृपया परिणामों का उपयोग केवल सत्यापन उद्देश्यों के लिए करें। हर किसी की निजता का सम्मान करना अच्छी बात है।",
