--- a/locales/mi/translation.json
+++ b/locales/mi/translation.json
@@ -28,8 +28,8 @@
     "Date of birth": "Te ra whanau",
     "First name": "Ingoa tuatahi",
     "Last name": "Ingoa whakamutunga",
-    "Success": "Success",
-    "Valid": "Valid",
+    "Success": "Momoho",
+    "Valid": "Whaimana",
     "Verification results": "Nga hua manatoko",
     "View details": "Tirohia nga taipitopito",
     "onlyForVerificationPurposes": "Tena koa whakamahia nga hua mo nga kaupapa manatoko anake. He mea pai ki te whakaute i te noho muna o te katoa.",
