--- a/locales/nl/translation.json
+++ b/locales/nl/translation.json
@@ -28,8 +28,8 @@
     "Date of birth": "Geboortedatum",
     "First name": "Voornaam",
     "Last name": "Achternaam",
-    "Success": "Success",
-    "Valid": "Valid",
+    "Success": "Succes",
+    "Valid": "Geldig",
     "Verification results": "Resultaten van verificatie",
     "View details": "Bekijk details",
     "onlyForVerificationPurposes": "Gebruik de resultaten alleen voor verificatiedoeleinden. Het is goed om ieders privacy te respecteren.",
