--- a/locales/sm/translation.json
+++ b/locales/sm/translation.json
@@ -28,8 +28,8 @@
     "Date of birth": "Aso fanau",
     "First name": "Igoa muamua",
     "Last name": "Faʻaiu",
-    "Success": "Success",
-    "Valid": "Valid",
+    "Success": "Manuia",
+    "Valid": "Aoga",
     "Verification results": "I&#39;uga fa&#39;amaoniga",
     "View details": "Va&#39;ai fa&#39;amatalaga",
     "onlyForVerificationPurposes": "Fa&#39;amolemole fa&#39;aoga tali mo na&#39;o fa&#39;amaoniga. Ose mea lelei le fa&#39;aaloalo i le le faalauaiteleina o tagata uma.",
