--- a/locales/ru/translation.json
+++ b/locales/ru/translation.json
@@ -28,8 +28,8 @@
     "Date of birth": "Дата рождения",
     "First name": "Имя",
     "Last name": "Фамилия",
-    "Success": "Success",
-    "Valid": "Valid",
+    "Success": "Успешно",
+    "Valid": "Достоверен",
     "Verification results": "Результаты проверки",
     "View details": "Подробнее",
     "onlyForVerificationPurposes": "Полученные результаты можно использовать только для проверки. Хорошо уважать неприкосновенность частной жизни каждого.",
