--- a/locales/zh-cn/translation.json
+++ b/locales/zh-cn/translation.json
@@ -18,7 +18,7 @@
     "notAcovidPass": "抱歉，這看起來不是 COVIDpass。 請聯繫[衛生部 (Ministry of Health)]({{link}})"
   },
   "thisLanguage": {
-    "callToAction": "使用 vaxxed.as 简体中文",
+    "callToAction": "使用 vaxxed.as 简体中文版",
     "name": "简体中文"
   },
   "verificationDialog": {
@@ -28,11 +28,11 @@
     "Date of birth": "出生日期",
     "First name": "名字",
     "Last name": "姓氏",
-    "Success": "Success",
-    "Valid": "Valid",
+    "Success": "成功",
+    "Valid": "有效",
     "Verification results": "验证结果",
     "View details": "查看详情",
     "onlyForVerificationPurposes": "请仅将结果用于验证目的。尊重每个人的隐私是一件好事。",
-    "yes": "是"
+    "yes": "成功"
   }
 }
